--- a/index.html
+++ b/index.html
@@ -14,9 +14,34 @@
   </div>
   <form id="guessForm">
     <input type="text" id="guessInput" placeholder="Enter your guess">
+    <ul id="suggestionsList"></ul>  <!-- List for suggestions -->
     <button type="submit">Guess</button>
-  </form>
+  </form>  
   <p id="resultMessage"></p>
   <script src="script.js"></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBdXv8SAUC5bnVzkj2_WyTzd619Ba1d1Hw",
+      authDomain: "guessmaster-53082.firebaseapp.com",
+      databaseURL: "https://guessmaster-53082-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "guessmaster-53082",
+      storageBucket: "guessmaster-53082.appspot.com",
+      messagingSenderId: "1073558760358",
+      appId: "1:1073558760358:web:fe0af8114a61149ca8bd67",
+      measurementId: "G-00RDJPWL2D"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
